# GMA_Project

./: .gitignore  README.md  analysis.ipynb  main.py  plot_exp1.py  pyproject.toml  run_exp1.py  test.sh  tune.py
results_kmeans/: summary.md
src/datasets/: loader.py
src/experiments/: __init__.py  centralized.py  federated_graphsage.py
src/federated/: __init__.py  client.py  server.py
src/models/: __init__.py  graphsage.py
src/partitioning/: partitioning.py
src/training/: __init__.py  metrics.py  splits.py
src/utilities/: partitioning.py
