[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dgl==1.1.2",
    "numpy==1.26.4",
    "packaging>=26.2",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "torch==2.1.2",
    "torchaudio>=2.11.0",
    "torchdata==0.7.1",
    "torchvision>=0.16.2",
]
