[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dgl==1.1.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy==1.26.4",
    "optuna>=4.8.0",
    "packaging>=26.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "torch==2.1.2",
    "torch-geometric>=2.7.0",
    "torchaudio>=2.11.0",
    "torchdata==0.7.1",
    "torchvision>=0.16.2",
]
